# llvm-practice

./: CMakeLists.txt  README.md
GameOfLife/: CMakeLists.txt  draw.cc  draw.hh  gol.cc  gol.hh  main.cc
GameOfLife/llvm/: gol.ll  golO2.ll  mainO2.ll
GameOfLife/llvm++/: main.ll
cmake/: comp-flags.cmake
compiler/: CMakeLists.txt  glang.cc
compiler/ast/: ast.cc  ast.hh
compiler/driver/: driver.cc  driver.hh
compiler/grammar/: lexer.lex  parser.y
compiler/src/: CMakeLists.txt
compiler/src/grammar/: CMakeLists.txt  lexer.lex  parser.y
compiler/stdlib/: stdlib.cc  stdlib.hh
drawer/: draw.cc  draw.hh  main.cc
drawer/C++/: draw.c  draw.h  main.c  mandel.c  mandel.h
drawer/llvm/: gol.ll
game-of-life/: CMakeLists.txt  draw.h  gol.c  gol.h  main.c
game-of-life/ir-dump++/: golO2.ll
game-of-life/ir-dump0/: mainO2.ll
game-of-life/ir-dump1/: main.ll
game-of-life/ir-dump2/: main.ll  mainO2.ll  mainO2NoStatic.ll
ir-gen/: CMakeLists.txt  gen.cc
ir-gen/output/: out.ll
